# bluez

./: acinclude.m4  configure.ac
dmtx/: Makefile.am  main.c  manager.c  manager.h  server.c
doc/: dmtx-api.txt
